use rawinput makefile hack for msys too

--- a/bsnes/ui-qt/Makefile
+++ b/bsnes/ui-qt/Makefile
@@ -39,7 +39,7 @@ rubyflags := $(if $(findstring .sdl,$(ruby)),`sdl-config --cflags`)
 rubyflags += $(if $(findstring .qt,$(ruby)),$(qtinc))
 
 # gross hack because at some point gcc optimization started breaking rawinput
-ifeq ($(platform),win)
+ifeq ($(platform),$(filter $(platform),win msys))
   rubyflags += -O0
 endif
 
