update build to Qt5 (#160)

--- a/snesreader/Makefile
+++ b/snesreader/Makefile
@@ -3,7 +3,7 @@ nall   := $(common)/nall
 zlib   := $(common)/zlib
 include $(nall)/Makefile
 
-qtlibs := QtCore QtGui
+qtlibs := QtCore QtGui QtWidgets
 include $(nall)/qt/Makefile
 
 c     := $(compiler) -xc -std=gnu99
