--- a/common/nall/qt/Makefile
+++ b/common/nall/qt/Makefile
@@ -26,18 +26,25 @@ ifeq ($(rcc),)
 endif
 
 ifeq ($(platform),$(filter $(platform),x msys))
+  qtlibs := $(subst Qt,Qt5,$(qtlibs))
+
   qtinc := `pkg-config --cflags $(qtlibs)`
   qtlib := `pkg-config --libs $(qtlibs)`
+
+  ifneq ($(filter reduce_relocations, $(shell pkg-config --variable qt_config $(qtlibs))),)
+    qtinc += -fPIC
+    qtlib += -fPIC
+  endif
 else ifeq ($(platform),osx)
   ifeq ($(qtpath),)
-    qtinc := $(foreach lib,$(qtlibs),-I/Library/Frameworks/$(lib).framework/Versions/4/Headers)
+    qtinc := $(foreach lib,$(qtlibs),-I/Library/Frameworks/$(lib).framework/Versions/5/Headers)
     qtlib := -L/Library/Frameworks
   else
     qtinc := -I$(qtpath)/include
-    qtinc += $(foreach lib,$(qtlibs),-I$(qtpath)/lib/$(lib).framework/Versions/4/Headers)
+    qtinc += $(foreach lib,$(qtlibs),-I$(qtpath)/lib/$(lib).framework/Versions/5/Headers)
     qtlib := -L$(qtpath)/lib -F$(qtpath)/lib
   endif
-  qtinc += $(foreach lib,$(qtlibs),-I/usr/local/lib/$(lib).framework/Versions/4/Headers)
+  qtinc += $(foreach lib,$(qtlibs),-I/usr/local/lib/$(lib).framework/Versions/5/Headers)
   qtlib += $(foreach lib,$(qtlibs),-framework $(lib))
   qtlib += -framework Carbon
   qtlib += -framework CoreFoundation
@@ -61,10 +68,9 @@ else ifeq ($(platform),win)
   qtlib := -L$(qtpath)/lib
   qtlib += -L$(qtpath)/plugins/imageformats
 
-  qtlib += $(foreach lib,$(qtlibs),-l$(lib)4)
+  qtlib += $(subst -lQt,-lQt5,$(foreach lib,$(qtlibs),-l$(lib)))
   qtlib += -lmingw32 -lqtmain -lcomdlg32 -loleaut32 -limm32 -lwinmm
   qtlib += -lwinspool -lmsimg32 -lole32 -ladvapi32 -lws2_32 -luuid -lgdi32
-  qtlib += $(foreach lib,$(qtlibs),-l$(lib)4)
 
   # optional image-file support:
   # qtlib += -lqjpeg -lqmng
