--- a/snesfilter/Makefile
+++ b/snesfilter/Makefile
@@ -2,7 +2,7 @@ common := ../common
 nall   := $(common)/nall
 include $(nall)/Makefile
 
-qtlibs := QtCore QtGui
+qtlibs := QtCore QtGui QtWidgets
 include $(nall)/qt/Makefile
 
 c     := $(compiler) -xc -std=gnu99
