Update to utilize a light, local, distribution of Qt for Windows dev
This breaks the implicit dependency on a fully installed Qt distribution on Windows platform, as well as the dependency on the PATH env var being set up.

--- a/common/nall/qt/Makefile
+++ b/common/nall/qt/Makefile
@@ -9,22 +9,6 @@
 # $(qtinc) -- includes for compiling
 # $(qtlib) -- libraries for linking
 
-ifeq ($(moc),)
-  ifeq ($(qtpath),)
-    moc := moc
-  else
-    moc := $(qtpath)/bin/moc
-  endif
-endif
-
-ifeq ($(rcc),)
-  ifeq ($(qtpath),)
-    rcc := rcc
-  else
-    rcc := $(qtpath)/bin/rcc
-  endif
-endif
-
 ifeq ($(platform),$(filter $(platform),x msys))
   qtlibs := $(subst Qt,Qt5,$(qtlibs))
 
@@ -55,11 +39,8 @@ else ifeq ($(platform),osx)
   qtlib += -framework ApplicationServices
 else ifeq ($(platform),win)
   ifeq ($(qtpath),)
-    # find Qt install directory from PATH environment variable
-    qtpath := $(foreach path,$(subst ;, ,$(PATH)),$(if $(wildcard $(path)/$(moc).exe),$(path)))
-    qtpath := $(strip $(qtpath))
-    qtpath := $(subst \,/,$(qtpath))
-    qtpath := $(patsubst %/bin,%,$(qtpath))
+    qtpath := ../external/qt/mingw53_32
+    winqtpath := $(subst /,\,$(qtpath))
   endif
 
   qtinc := -I$(qtpath)/include
@@ -74,4 +55,23 @@ else ifeq ($(platform),win)
 
   # optional image-file support:
   # qtlib += -lqjpeg -lqmng
+
+  qtdlls := $(qtlibs:Qt%=Qt5%.dll)
+
+endif
+
+ifeq ($(moc),)
+  ifeq ($(qtpath),)
+    moc := moc
+  else
+    moc := $(qtpath)/bin/moc
+  endif
+endif
+
+ifeq ($(rcc),)
+  ifeq ($(qtpath),)
+    rcc := rcc
+  else
+    rcc := $(qtpath)/bin/rcc
+  endif
 endif
