--- a/bsnes/Makefile
+++ b/bsnes/Makefile
@@ -85,6 +85,7 @@ ifeq ($(platform),osx)
 	cp -f data/bsnes.icns $(osxbundle)/Contents/Resources/AppIcon.icns
 	sed 's/@VERSION/$(version)/g' data/Info.plist > $(osxbundle)/Contents/Info.plist
 else
+	$(foreach qtdll,$(qtdlls),xcopy $(winqtpath)\bin\$(qtdll) .\out /D /Y &)
 	$(strip $(cpp) -o out/bsnes $(objects) $(link))
 endif
 
