testing version param in makefile for dev builds

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,13 +13,13 @@ build_script:
 
     cd bsnes
 
-    mingw32-make -j8 build platform=win profile=accuracy
+    mingw32-make -j8 build platform=win profile=accuracy version=%APPVEYOR_BUILD_VERSION%
 
     move out\bsnes.exe out\bsnes-accuracy.exe
 
     del /Q obj\*.o
 
-    mingw32-make -j8 platform=win profile=compatibility
+    mingw32-make -j8 platform=win profile=compatibility version=%APPVEYOR_BUILD_VERSION%
 
 
     cd out
