--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,17 +15,9 @@ build_script:
 
     mingw32-make -j8 build platform=win profile=accuracy version=%APPVEYOR_BUILD_VERSION%
 
-    move out\bsnes.exe out\bsnes-accuracy.exe
-
-    del /Q obj\*.o
-
     mingw32-make -j8 build platform=win profile=performance version=%APPVEYOR_BUILD_VERSION%
 
-    move out\bsnes.exe out\bsnes-performance.exe
-
-    del /Q obj\*.o
-
-    mingw32-make -j8 platform=win profile=compatibility version=%APPVEYOR_BUILD_VERSION%
+    mingw32-make -j8 platform=win version=%APPVEYOR_BUILD_VERSION%
 
 
     cd out
